[gd_scene load_steps=114 format=2]

[ext_resource path="res://src/Builder/RecipeBuilder.gd" type="Script" id=1]
[ext_resource path="res://src/Builder/ItemSlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Builder/item_bar.png" type="Texture" id=3]
[ext_resource path="res://src/Builder/Output.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Builder/Recipes/All_Recipes.tres" type="Resource" id=5]

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 3 )
region = Rect2( 11232, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 108, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 324, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 432, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 540, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 648, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 756, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 864, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 972, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 1080, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 1188, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 1296, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 1404, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 1512, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 1620, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 1728, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 1836, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 1944, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 2052, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 2160, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 2268, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 2376, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 2484, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 2592, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 2700, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 2808, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 2916, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 3024, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 3132, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 3240, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 3348, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 3456, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 3564, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 3672, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 3780, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 3888, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 3996, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 4104, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 4212, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 4320, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 4428, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 4536, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 4644, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 4752, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 4860, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 4968, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 5076, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 5184, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 5292, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 5400, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 5508, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 5616, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 5724, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 5832, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 5940, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 6048, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 6156, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 6264, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 6372, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 6480, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 6588, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 6696, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 6804, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 6912, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 7020, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 7128, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 7236, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 7344, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 7452, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 7560, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 7668, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 7776, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 7884, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 7992, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 8100, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 8208, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 8316, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 8424, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 3 )
region = Rect2( 8532, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 3 )
region = Rect2( 8640, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 3 )
region = Rect2( 8748, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 3 )
region = Rect2( 8856, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 3 )
region = Rect2( 8964, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 3 )
region = Rect2( 9072, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 3 )
region = Rect2( 9180, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 3 )
region = Rect2( 9288, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 3 )
region = Rect2( 9396, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 3 )
region = Rect2( 9504, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 3 )
region = Rect2( 9612, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 3 )
region = Rect2( 9720, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 3 )
region = Rect2( 9828, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 3 )
region = Rect2( 9936, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 3 )
region = Rect2( 10044, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 3 )
region = Rect2( 10152, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 3 )
region = Rect2( 10260, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 3 )
region = Rect2( 10368, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 3 )
region = Rect2( 10476, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 3 )
region = Rect2( 10584, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 3 )
region = Rect2( 10692, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 3 )
region = Rect2( 10800, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 3 )
region = Rect2( 10908, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 3 )
region = Rect2( 11016, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 3 )
region = Rect2( 11124, 0, 108, 34 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 3 )
region = Rect2( 11232, 0, 108, 34 )

[sub_resource type="SpriteFrames" id=107]
animations = [ {
"frames": [ SubResource( 108 ) ],
"loop": false,
"name": "Done",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "Empty",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ) ],
"loop": false,
"name": "Loading",
"speed": 52.0
} ]

[node name="RecipeBuilder" type="Node2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 1 )
recipe_list = ExtResource( 5 )

[node name="Output" parent="." instance=ExtResource( 4 )]
position = Vector2( -71.5, 0 )
scale = Vector2( 1, 1 )
frame = 9

[node name="BuilderSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 107 )
animation = "Empty"

[node name="ItemSlot1" parent="." instance=ExtResource( 2 )]
position = Vector2( -36, 0 )

[node name="ItemSlot2" parent="." instance=ExtResource( 2 )]
position = Vector2( -2, 0 )

[node name="ItemSlot3" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 0 )

[connection signal="animation_finished" from="BuilderSprite" to="." method="_on_BuilderSprite_animation_finished"]
[connection signal="is_full" from="ItemSlot1" to="." method="_on_ItemSlot1_is_full"]
[connection signal="is_full" from="ItemSlot2" to="." method="_on_ItemSlot2_is_full"]
[connection signal="is_full" from="ItemSlot3" to="." method="_on_ItemSlot3_is_full"]
